# teru2bot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fixtures/: forecast.example.json
src/: api.rs  config.rs  main.rs
src/api/: structs.rs
