[package]
name = "lambda-weather-reporter"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws_lambda_events = "0.7.2"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.22"
serde = "1.0.150"
serde_json = "1.0.87"
webhook = "2.1.1"
http-client = "6.5.3"
openssl = { version = "0.10", features = ["vendored"] }